--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -41,6 +41,7 @@
               [appendTo]="'body'"
               (onChange)="logSkillId(skill.id, $event.value)"
               [disabled]="isSkillDisabled(skill.id)"
+              [style]="{ width: '180px' }"
             >
               > ></p-dropdown
             >
