--- a/src/app/features/attitude-skill/attitude-skill.component.html
+++ b/src/app/features/attitude-skill/attitude-skill.component.html
@@ -146,7 +146,7 @@
             <p-columnFilter
               type="text"
               field="group_name"
-              placeholder="Search by Group Attitude Skill"
+              placeholder="Search by group attitude skill"
               ariaLabel="Filter Group Attitude skill"
             />
           </th>
