--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.css
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.css
@@ -8,16 +8,16 @@
 }
 
 .group-column {
-  width: 350px; /* Atur lebar kolom sesuai kebutuhan */
-  max-width: 350px;
+  width: 250px; /* Atur lebar kolom sesuai kebutuhan */
+  max-width: 250px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
 
 .percent-column {
-  width: 350px;
-  max-width: 350px;
+  width: 300px;
+  max-width: 300px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -29,6 +29,13 @@
 
 .action-buttons button:last-child {
   margin-right: 0; /* Hapus margin pada tombol terakhir */
+}
+
+.action-buttons {
+  display: flex;
+  justify-content: center; /* Posisi tombol di tengah */
+  align-items: center; /* Pusatkan tombol secara vertikal */
+  gap: 4px; /* Jarak antar tombol */
 }
 
 .title {
@@ -88,4 +95,10 @@
   display: flex;
   justify-content: flex-end; /* Aligns the button to the right */
   margin-top: 20px; /* Adds some space above the button */
+}
+
+.column-filter {
+  display: flex;
+  align-items: center;
+  width: 275px;
 }
