--- a/src/app/emp-achieve/emp-achieve.component.html
+++ b/src/app/emp-achieve/emp-achieve.component.html
@@ -173,110 +173,92 @@
   </p-dialog>
 
   <div class="card">
-    <p-table
-      #dt2
-      [value]="empAchieveSkill"
-      dataKey="id"
-      [rows]="10"
-      [rowsPerPageOptions]="[10, 25, 50]"
-      [loading]="isLoading"
-      [paginator]="true"
-      [globalFilterFields]="[
-        'user_id',
-        'notes',
-        'achievement_id',
-        'score',
-        'assessment_year'
-      ]"
-      [tableStyle]="{ 'min-width': '75rem' }"
-    >
-      <ng-template pTemplate="header">
-        <tr>
-          <th style="width: 10px">No.</th>
-          <th class="division-column">User Name</th>
-          <th class="division-column">Notes</th>
-          <th class="division-column">Achievement Name</th>
-          <th class="division-column">Score</th>
-          <th class="division-column">Assessment Year</th>
-          <th class="action-column">Action</th>
-        </tr>
-        <tr>
-          <th></th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="username"
-              placeholder="Search by User Name"
-              ariaLabel="Filter User Name"
-            />
-          </th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="notes"
-              placeholder="Search by Notes"
-              ariaLabel="Filter Notes"
-            />
-          </th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="achievement_name"
-              placeholder="Search by Achievement Name"
-              ariaLabel="Filter Achievement Name"
-            />
-          </th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="score"
-              placeholder="Search by Score"
-              ariaLabel="Filter Score"
-            />
-          </th>
-          <th>
-            <p-columnFilter
-              type="text"
-              field="assessment_year"
-              placeholder="Search by Assessment Year"
-              ariaLabel="Filter Assessment Year"
-            />
-          </th>
-          <th></th>
-        </tr>
-      </ng-template>
+    <div class="p-inputgroup" style="width: 250px">
+      <input
+        type="text"
+        pInputText
+        placeholder="Search..."
+        (input)="onGlobalSearch($event)"
+      />
+      <span class="p-inputgroup-addon">
+        <i class="pi pi-search"></i>
+      </span>
+    </div>
 
-    <ng-template pTemplate="body" let-achievement>
-      <tr>
-        <!-- <td>{{ achievement.id }}</td> -->
-        <td>{{ achievement.username }}</td>
-        <td>{{ achievement.notes }}</td>
-        <td>{{ achievement.achievement_name }}</td>
-        <td>{{ achievement.score }}</td>
-        <td>{{ achievement.assessment_year }}</td>
-        <td>
-          <button
-            pButton
-            icon="pi pi-pencil"
-            label="Edit"
-            class="p-button-sm p-button-info"
-            (click)="showEditDialog(achievement)"
-          ></button>
-          <button
-            pButton
-            icon="pi pi-trash"
-            label="Delete"
-            class="p-button-sm p-button-danger"
-            (click)="deleteEmpAchieve(achievement.id, achievement.user_id, achievement.assessment_year)"
-          ></button>
-        </td>
-      </tr>
-    </ng-template>
-      <ng-template pTemplate="emptymessage">
-        <tr>
-          <td colspan="4">No emp achieve found.</td>
-        </tr>
-      </ng-template>
-    </p-table>
+    <div class="card">
+      <p-table
+        #dt2
+        [value]="empAchieveSkill"
+        dataKey="id"
+        [rows]="10"
+        [rowsPerPageOptions]="[10, 25, 50]"
+        [loading]="isLoading"
+        [paginator]="true"
+        [globalFilterFields]="[
+          'username',
+          'user_id',
+          'notes',
+          'achievement_id',
+          'achievement_name',
+          'score',
+          'assessment_year'
+        ]"
+        [tableStyle]="{ 'min-width': '75rem' }"
+      >
+        <ng-template pTemplate="header">
+          <tr>
+            <th style="width: 10px">No.</th>
+            <th class="division-column">Username</th>
+            <th class="division-column">Notes</th>
+            <th class="division-column">Achievement Name</th>
+            <th class="division-column" pSortableColumn="score">
+              Score
+              <p-sortIcon field="score"></p-sortIcon>
+            </th>
+            <th class="division-column" pSortableColumn="assessment_year">
+              Assessment Year
+              <p-sortIcon field="assessment_year"></p-sortIcon>
+            </th>
+            <th class="action-column">Action</th>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-achievement let-i="rowIndex">
+          <tr>
+            <td>{{ i + 1 }}</td>
+            <td class="division-column">{{ achievement.username }}</td>
+            <td class="division-column">{{ achievement.notes }}</td>
+            <td class="division-column">{{ achievement.achievement_name }}</td>
+            <td class="division-column">{{ achievement.score }}</td>
+            <td class="division-column">{{ achievement.assessment_year }}</td>
+            <td>
+              <button
+                pButton
+                icon="pi pi-pencil"
+                class="p-button-sm p-button-info action-button-spacing"
+                (click)="showEditDialog(achievement)"
+              ></button>
+              <button
+                pButton
+                icon="pi pi-trash"
+                class="p-button-sm p-button-danger action-button-spacing"
+                (click)="
+                  deleteEmpAchieve(
+                    achievement.id,
+                    achievement.user_id,
+                    achievement.assessment_year
+                  )
+                "
+              ></button>
+            </td>
+          </tr>
+        </ng-template>
+        <ng-template pTemplate="emptymessage">
+          <tr>
+            <td colspan="4">No emp achieve found.</td>
+          </tr>
+        </ng-template>
+      </p-table>
+    </div>
   </div>
 </div>
