--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -2,6 +2,13 @@
 
 <div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - SIKAP DAN KEAHLIAN PERSONAL</h1>
+  <p style="text-align: center">
+    Total nilai yang harus anda isi: {{ getUnfilledScoresCount() }}
+  </p>
+  <p style="text-align: center">
+    Button simpan dapat ditekan jika anda sudah mengisi semua nilai yang ada
+    disini
+  </p>
 
   <div class="form-group">
     <label for="assessmentYear">Assessment Year:</label>
@@ -58,11 +65,12 @@
   </div>
 
   <div class="button-container">
-    <p-button
+    <button
+      pButton
+      type="button"
       label="Simpan"
-      icon="pi pi-save"
       (click)="saveSkills()"
-      [disabled]="!isSaveDisabled()"
-    ></p-button>
+      [disabled]="getUnfilledScoresCount() > 0"
+    ></button>
   </div>
 </div>
