--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -2,6 +2,38 @@
 <div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - KEAHLIAN TEKNIS</h1>
 
+  <p class="center-text">Level tiap tingkat kemahiran:</p>
+  <table class="kemahiran-table">
+    <thead>
+      <tr>
+        <th>Tingkat Kemahiran</th>
+        <th>Level</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Ahli (Mampu memberikan solusi dan konsultasi)</td>
+        <td>5</td>
+      </tr>
+      <tr>
+        <td>Advance (Mampu sharing knowledge)</td>
+        <td>4</td>
+      </tr>
+      <tr>
+        <td>Praktisi (Pernah handle project)</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>Memahami (Pernah mengikuti training)</td>
+        <td>2</td>
+      </tr>
+      <tr>
+        <td>Berpengetahuan</td>
+        <td>1</td>
+      </tr>
+    </tbody>
+  </table>
+
   <div class="form-group">
     <label for="assessmentYear">Assessment Year:</label>
     <input
