--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -2,13 +2,44 @@
 
 <div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - SIKAP DAN KEAHLIAN PERSONAL</h1>
-  <p style="text-align: center">
-    Total nilai yang harus anda isi: {{ getUnfilledScoresCount() }}
+  <!-- <p style="text-align: center">
+    Total nilai yang harus anda isi: {{ getUnfilledScoresCount() }}.
   </p>
   <p style="text-align: center">
     Button simpan dapat ditekan jika anda sudah mengisi semua nilai yang ada
-    disini
-  </p>
+    disini.
+  </p> -->
+  <p class="center-text">Bobot tiap kriteria nilai:</p>
+  <table class="nilai-table">
+    <thead>
+      <tr>
+        <th>Kriteria Nilai</th>
+        <th>Nilai</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Sangat Baik</td>
+        <td>100</td>
+      </tr>
+      <tr>
+        <td>Baik</td>
+        <td>80</td>
+      </tr>
+      <tr>
+        <td>Cukup</td>
+        <td>60</td>
+      </tr>
+      <tr>
+        <td>Kurang</td>
+        <td>40</td>
+      </tr>
+      <tr>
+        <td>Sangat Kurang</td>
+        <td>20</td>
+      </tr>
+    </tbody>
+  </table>
 
   <div class="form-group">
     <label for="assessmentYear">Assessment Year:</label>
@@ -33,7 +64,7 @@
           <th>No.</th>
           <th>Kriteria</th>
           <th>Nilai</th>
-          <th>Status</th>
+          <!-- <th>Status</th> -->
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-skill let-i="rowIndex">
@@ -53,12 +84,11 @@
               > ></p-dropdown
             >
           </td>
-          <td>
-            <!-- Dynamically display status with color -->
+          <!-- <td>
             <span [ngStyle]="{ color: getStatusColor(skill.id) }">
               {{ getStatusText(skill.id) }}
             </span>
-          </td>
+          </td> -->
         </tr>
       </ng-template>
     </p-table>
