--- a/src/app/emp-technical-skill/emp-technical-skill.component.css
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.css
@@ -65,3 +65,33 @@
   justify-content: flex-end; /* Aligns the button to the right */
   margin-top: 20px; /* Adds some space above the button */
 }
+
+.center-text {
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.kemahiran-table {
+  width: 50%;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+
+.kemahiran-table th,
+.kemahiran-table td {
+  border: 1px solid #ddd;
+  padding: 8px 12px;
+}
+
+.kemahiran-table th {
+  background-color: lightblue;
+}
+
+.kemahiran-table tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.kemahiran-table tr:hover {
+  background-color: #f1f1f1;
+}
