--- a/src/app/features/summary/summary.component.css
+++ b/src/app/features/summary/summary.component.css
@@ -1,6 +1,21 @@
 .dropdown-container {
-    display: flex;
-    justify-content: flex-end;
-    margin: 0;
-    padding: 0; 
-  }
+  display: flex;
+  justify-content: flex-end;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.title {
+  text-align: center;
+  color: #333;
+  margin-bottom: 20px;
+}
