--- a/src/app/features/technical-skill/technical-skill/technical-skill.component.html
+++ b/src/app/features/technical-skill/technical-skill/technical-skill.component.html
@@ -15,21 +15,43 @@
   <br />
   <div class="card">
     <p-table
-      #dt2
+      #dt1
       [value]="technicalSkills"
       dataKey="id"
       [rows]="10"
+      [globalFilterFields]="['technical_skill']"
       [rowsPerPageOptions]="[10, 25, 50]"
       [paginator]="true"
       [tableStyle]="{ 'min-width': '45rem' }"
     >
+      <ng-template pTemplate="caption">
+        <div class="flex">
+          <button
+            pButton
+            label="Clear"
+            class="p-button-outlined"
+            icon="pi pi-filter-slash"
+            (click)="clearFilters(dt1)"
+          ></button>
+          <span class="p-input-icon-left ml-auto">
+            <i class="pi pi-search"></i>
+            <input
+              pInputText
+              type="text"
+              (input)="onGlobalSearch($event)"
+              placeholder="Search keyword"
+            />
+          </span>
+        </div>
+      </ng-template>
+
       <ng-template pTemplate="header">
         <tr>
           <th class="action-column">No.</th>
           <th class="division-column">Technical Skill</th>
           <th class="action-column">Action</th>
         </tr>
-        <tr>
+        <!-- <tr>
           <th></th>
           <th>
             <p-columnFilter
@@ -39,7 +61,7 @@
             ></p-columnFilter>
           </th>
           <th></th>
-        </tr>
+        </tr> -->
       </ng-template>
       <ng-template pTemplate="body" let-skill let-i="rowIndex">
         <tr>
@@ -68,6 +90,7 @@
   <app-create-tech-skill-dialog
     [(visible)]="displayDialog"
     [techSkillData]="selectedTechSkill"
+    [nameList]="nameList"
     (techSkillSaved)="onTechSkillSaved($event)"
   ></app-create-tech-skill-dialog>
 </div>
