--- a/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
+++ b/src/app/emp-attitude-skill-new/emp-attitude-skill-new.component.html
@@ -2,13 +2,7 @@
 
 <div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - SIKAP DAN KEAHLIAN PERSONAL</h1>
-  <!-- <p style="text-align: center">
-    Total nilai yang harus anda isi: {{ getUnfilledScoresCount() }}.
-  </p>
-  <p style="text-align: center">
-    Button simpan dapat ditekan jika anda sudah mengisi semua nilai yang ada
-    disini.
-  </p> -->
+
   <p class="center-text">Bobot tiap kriteria nilai:</p>
   <table class="nilai-table">
     <thead>
@@ -42,14 +36,17 @@
   </table>
 
   <div class="form-group">
-    <label for="assessmentYear">Assessment Year:</label>
-    <input
-      type="number"
-      id="assessmentYear"
-      [(ngModel)]="assessmentYear"
-      disabled="true"
-      class="input-field"
-    />
+    <label for="assessmentYearDropdown">Assessment Year:</label>
+    <select
+      id="assessmentYearDropdown"
+      [(ngModel)]="selectedAssessmentYear"
+      (change)="onAssessmentYearChange()"
+      class="dropdown"
+    >
+      <option *ngFor="let year of assessmentYears" [value]="year">
+        {{ year }}
+      </option>
+    </select>
   </div>
 
   <div *ngFor="let group of groupData" class="group-container">
@@ -64,7 +61,6 @@
           <th>No.</th>
           <th>Kriteria</th>
           <th>Nilai</th>
-          <!-- <th>Status</th> -->
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-skill let-i="rowIndex">
@@ -84,11 +80,6 @@
               > ></p-dropdown
             >
           </td>
-          <!-- <td>
-            <span [ngStyle]="{ color: getStatusColor(skill.id) }">
-              {{ getStatusText(skill.id) }}
-            </span>
-          </td> -->
         </tr>
       </ng-template>
     </p-table>
