--- a/src/app/emp-suggest/emp-suggest.component.html
+++ b/src/app/emp-suggest/emp-suggest.component.html
@@ -4,14 +4,17 @@
   <h1 class="title">BERIKAN TANGGAPAN ANDA (HARAPAN, KENDALA, MASUKAN)</h1>
 
   <div class="form-group">
-    <label for="assessmentYear">Assessment Year:</label>
-    <input
-      type="number"
-      id="assessmentYear"
-      [(ngModel)]="assessmentYear"
-      disabled="true"
-      class="input-field"
-    />
+    <label for="assessmentYearDropdown">Assessment Year:</label>
+    <select
+      id="assessmentYearDropdown"
+      [(ngModel)]="selectedAssessmentYear"
+      (change)="onAssessmentYearChange()"
+      class="dropdown"
+    >
+      <option *ngFor="let year of assessmentYears" [value]="year">
+        {{ year }}
+      </option>
+    </select>
   </div>
 
   <div *ngFor="let group of groupData" class="group-container">
@@ -54,6 +57,7 @@
       icon="pi pi-plus"
       class="btn btn-primary"
       (click)="addRow(group)"
+      [disabled]="isPreviousYearSelected"
     >
     </p-button>
   </div>
@@ -65,6 +69,7 @@
       icon="pi pi-save"
       (click)="saveSuggestions()"
       class="btn btn-success"
+      [disabled]="isPreviousYearSelected"
     >
     </p-button>
   </div>
