--- a/src/app/emp-technical-skill/emp-technical-skill.component.css
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.css
@@ -126,3 +126,8 @@ label {
 .dropdown option {
   padding: 10px; /* Jarak dalam opsi dropdown */
 }
+
+.p-tooltip {
+  max-width: 400px; /* Lebar maksimum tooltip */
+  white-space: normal; /* Izinkan teks wrapping */
+}
