--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -2,38 +2,6 @@
 <div class="container" style="background-color: #f5f5f5">
   <h1 class="title">FORM EVALUASI KINERJA - KEAHLIAN TEKNIS</h1>
 
-  <p class="center-text">Level tiap tingkat kemahiran:</p>
-  <table class="kemahiran-table">
-    <thead>
-      <tr>
-        <th>Tingkat Kemahiran</th>
-        <th>Level</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Ahli (Mampu memberikan solusi dan konsultasi)</td>
-        <td>5</td>
-      </tr>
-      <tr>
-        <td>Advance (Mampu sharing knowledge)</td>
-        <td>4</td>
-      </tr>
-      <tr>
-        <td>Praktisi (Pernah handle project)</td>
-        <td>3</td>
-      </tr>
-      <tr>
-        <td>Memahami (Pernah mengikuti training)</td>
-        <td>2</td>
-      </tr>
-      <tr>
-        <td>Berpengetahuan</td>
-        <td>1</td>
-      </tr>
-    </tbody>
-  </table>
-
   <div class="form-group">
     <label for="assessmentYearDropdown">Assessment Year:</label>
     <select
@@ -56,7 +24,20 @@
         <tr>
           <th style="width: 10%">No.</th>
           <th style="width: 70%">Keterangan</th>
-          <th style="width: 20%">Tingkat kemahiran (level)</th>
+          <th style="width: 20%">
+            Tingkat kemahiran
+            <i
+              class="pi pi-info-circle"
+              pTooltip="Level tingkat kemahiran: 
+              Ahli = 5 
+              Advance = 4
+              Praktisi = 3 
+              Memahami = 2 
+              Berpengetahuan = 1"
+              tooltipPosition="top"
+              style="margin-left: 5px; cursor: pointer; color: #007ad9"
+            ></i>
+          </th>
           <th style="width: 20%">Action</th>
         </tr>
       </ng-template>
