translate all indo to english

--- a/src/app/emp-achieve/emp-achieve.component.html
+++ b/src/app/emp-achieve/emp-achieve.component.html
@@ -3,7 +3,7 @@
 
 <app-nav-bar></app-nav-bar>
 <div class="container" style="background-color: #f5f5f5">
-  <h2 class="title">PENCAPAIAN KARYAWAN</h2>
+  <h2 class="title">EMPLOYEE ACHIEVEMENT</h2>
 
   <!-- Button to open the create modal -->
   <div class="card flex justify-content-end">
