--- a/src/app/features/attitude-skill/attitude-skill.component.html
+++ b/src/app/features/attitude-skill/attitude-skill.component.html
@@ -3,7 +3,7 @@
 
 <app-nav-bar></app-nav-bar>
 <div class="container" style="background-color: #f5f5f5">
-  <h2 class="title">SIKAP & KEAHLIAN</h2>
+  <h2 class="title">ATTITUDE & SKILL</h2>
 
   <!-- Button to open the create modal -->
   <div class="card flex justify-content-end">
