--- a/src/app/features/technical-skill/technical-skill/technical-skill.component.html
+++ b/src/app/features/technical-skill/technical-skill/technical-skill.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="background-color: #f5f5f5">
-  <h2 class="title">KEAHLIAN TEKNIS</h2>
+  <h2 class="title">TECHNICAL SKILL</h2>
 
   <div class="card flex justify-content-end">
     <button
