--- a/src/app/emp-dev-plan/emp-dev-plan.component.html
+++ b/src/app/emp-dev-plan/emp-dev-plan.component.html
@@ -1,8 +1,8 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="background-color: #f5f5f5">
-  <h1 class="title">FORM EVALUASI KINERJA - RENCANA PENGEMBANGAN</h1>
-
+  <h2 class="title">PERFORMANCE EVALUATION FORM - DEVELOPMENT PLAN</h2>
+  <br />
   <div class="form-group">
     <label for="assessmentYearDropdown">Assessment Year:</label>
     <select
@@ -24,8 +24,8 @@
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 10%">No.</th>
-          <th style="width: 70%">Keterangan</th>
-          <th style="width: 20%">Action</th>
+          <th style="width: 70%">Description</th>
+          <th style="width: 10%">Action</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-row let-i="rowIndex">
@@ -42,20 +42,20 @@
             ></textarea>
           </td>
           <td>
-            <p-button
-              label="Hapus"
+            <button
+              pButton
               icon="pi pi-trash"
               class="p-button-sm p-button-danger"
               (click)="deleteRow(group, i)"
               [disabled]="row.status === 'saved'"
-            ></p-button>
+            ></button>
           </td>
         </tr>
       </ng-template>
     </p-table>
     <br />
     <p-button
-      label="Tambah Row"
+      label="Add new row"
       icon="pi pi-plus"
       (click)="addRow(group)"
       class="add-row-button"
