--- a/src/app/emp-suggest/emp-suggest.component.html
+++ b/src/app/emp-suggest/emp-suggest.component.html
@@ -1,8 +1,10 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="background-color: #f5f5f5">
-  <h1 class="title">BERIKAN TANGGAPAN ANDA (HARAPAN, KENDALA, MASUKAN)</h1>
-
+  <h2 class="title">
+    PROVIDE YOUR FEEDBACK (EXPECTATIONS, CHALLENGES, SUGGESTIONS)
+  </h2>
+  <br />
   <div class="form-group">
     <label for="assessmentYearDropdown">Assessment Year:</label>
     <select
@@ -22,8 +24,8 @@
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 10%">No.</th>
-          <th style="width: 70%">Tanggapan</th>
-          <th style="width: 20%">Action</th>
+          <th style="width: 70%">Feedback</th>
+          <th style="width: 10%">Action</th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-row let-i="rowIndex">
@@ -39,21 +41,20 @@
             ></textarea>
           </td>
           <td>
-            <p-button
-              label="Hapus"
+            <button
+              pButton
               icon="pi pi-trash"
               class="p-button-sm p-button-danger"
               (click)="deleteRow(group, i)"
               [disabled]="row.saved"
-            >
-            </p-button>
+            ></button>
           </td>
         </tr>
       </ng-template>
     </p-table>
     <br />
     <p-button
-      label="Tambah Row"
+      label="Add new row"
       icon="pi pi-plus"
       class="btn btn-primary"
       (click)="addRow(group)"
