--- a/src/app/emp-technical-skill/emp-technical-skill.component.html
+++ b/src/app/emp-technical-skill/emp-technical-skill.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 <div class="container" style="background-color: #f5f5f5">
-  <h1 class="title">FORM EVALUASI KINERJA - KEAHLIAN TEKNIS</h1>
-
+  <h2 class="title">PERFORMANCE EVALUATION FORM - TECHNICAL SKILL</h2>
+  <br />
   <div class="form-group">
     <label for="assessmentYearDropdown">Assessment Year:</label>
     <select
@@ -23,13 +23,12 @@
       <ng-template pTemplate="header">
         <tr>
           <th style="width: 10%">No.</th>
-          <th style="width: 70%">Keterangan</th>
+          <th style="width: 70%">Description</th>
           <th style="width: 20%">
-            Tingkat kemahiran
+            Skill level
             <i
               class="pi pi-info-circle"
-              pTooltip="Level tingkat kemahiran: 
-              Ahli = 5 
+              pTooltip="Ahli = 5 
               Advance = 4
               Praktisi = 3 
               Memahami = 2 
@@ -74,21 +73,20 @@
           </td>
 
           <td>
-            <p-button
-              label="Hapus"
+            <button
+              pButton
               icon="pi pi-trash"
               class="p-button-sm p-button-danger"
               (click)="deleteRow(group, i)"
               [disabled]="row.status === 'saved'"
-            >
-            </p-button>
+            ></button>
           </td>
         </tr>
       </ng-template>
     </p-table>
     <br />
     <p-button
-      label="Tambah Row"
+      label="Add new row"
       icon="pi pi-plus"
       (click)="addRow(group)"
       [disabled]="isPreviousYearSelected"
