--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -3,7 +3,7 @@
 
 <app-nav-bar></app-nav-bar>
 <div class="container" style="background-color: #f5f5f5">
-  <h2 class="title">GRUP PENCAPAIAN</h2>
+  <h2 class="title">GROUP ACHIEVEMENT</h2>
 
   <!-- Button to open the create modal -->
   <div class="card flex justify-content-end">
