--- a/src/app/features/user/user-list/user-list.component.html
+++ b/src/app/features/user/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <app-nav-bar></app-nav-bar>
 
 <div class="container" style="background-color: #f5f5f5">
-  <h2 class="title">USERS</h2>
+  <h2 class="title">USER</h2>
   <div class="card flex justify-content-end">
     <button
       pButton
