--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -43,6 +43,19 @@
         >
         </p-dropdown>
       </div>
+      <br />
+      <div class="p-field">
+        <label for="enabled">Enabled</label>
+        <br />
+        <select
+          id="enabled"
+          [(ngModel)]="newAchievement.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
+      </div>
     </div>
     <p-footer>
       <button
@@ -89,6 +102,18 @@
           placeholder="Select Group Achievement"
         >
         </p-dropdown>
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editEnabled">Enabled</label>
+        <select
+          id="editEnabled"
+          [(ngModel)]="editAchievement.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
       </div>
     </div>
     <p-footer>
