--- a/src/app/features/dev-plan/dev-plan.component.html
+++ b/src/app/features/dev-plan/dev-plan.component.html
@@ -36,6 +36,19 @@
           Data sudah ada
         </div>
       </div>
+      <br />
+      <div class="p-field">
+        <label for="enabled">Enabled</label>
+        <br />
+        <select
+          id="enabled"
+          [(ngModel)]="newDevPlan.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
+      </div>
     </div>
     <p-footer>
       <button
@@ -71,6 +84,18 @@
           pInputText
           [(ngModel)]="selectedDevPlan.plan"
         />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editEnabled">Enabled</label>
+        <select
+          id="editEnabled"
+          [(ngModel)]="selectedDevPlan.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
       </div>
     </div>
     <p-footer>
