--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -45,6 +45,19 @@
           [(ngModel)]="newGroupAchievement.percentage"
         />
       </div>
+      <br />
+      <div class="p-field">
+        <label for="enabled">Enabled</label>
+        <br />
+        <select
+          id="enabled"
+          [(ngModel)]="newGroupAchievement.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
+      </div>
     </div>
     <p-footer>
       <button
@@ -91,6 +104,18 @@
           pInputText
           [(ngModel)]="selectedGroupAchievement.percentage"
         />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editEnabled">Enabled</label>
+        <select
+          id="editEnabled"
+          [(ngModel)]="selectedGroupAchievement.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
       </div>
     </div>
     <p-footer>
