--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -26,6 +26,7 @@
     <div class="p-fluid">
       <div class="p-field">
         <label for="groupName">Group Attitude Skill</label>
+        <br />
         <input
           id="groupName"
           type="text"
@@ -39,12 +40,26 @@
       <br />
       <div class="p-field">
         <label for="percentage">Weight</label>
+        <br />
         <input
           id="percentage"
           type="number"
           pInputText
           [(ngModel)]="newGroupAttitudeSkill.percentage"
         />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="enabled">Enabled</label>
+        <br />
+        <select
+          id="enabled"
+          [(ngModel)]="newGroupAttitudeSkill.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
       </div>
     </div>
     <p-footer>
@@ -92,6 +107,18 @@
           pInputText
           [(ngModel)]="selectedGroupAttitudeSkill.percentage"
         />
+      </div>
+      <br />
+      <div class="p-field">
+        <label for="editEnabled">Enabled</label>
+        <select
+          id="editEnabled"
+          [(ngModel)]="selectedGroupAttitudeSkill.enabled"
+          class="p-inputtext"
+        >
+          <option [value]="1">Enabled</option>
+          <option [value]="0">Disabled</option>
+        </select>
       </div>
     </div>
     <p-footer>
