--- a/src/app/features/technical-skill/create-tech-skill-dialog/create-tech-skill-dialog.component.html
+++ b/src/app/features/technical-skill/create-tech-skill-dialog/create-tech-skill-dialog.component.html
@@ -57,7 +57,7 @@
         type="submit"
         label="{{ techSkillData ? 'Update' : 'Save' }}"
         icon="pi pi-check"
-        [disabled]="!techSkill.technical_skill || !techSkill.enabled"
+        [disabled]="!techSkill.technical_skill"
         (click)="saveUser()"
       ></button>
     </div>
