--- a/src/app/features/division/division.component.html
+++ b/src/app/features/division/division.component.html
@@ -25,7 +25,8 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="groupName">Division Name</label>
+        <label for="groupName" class="form-label">Division Name</label>
+
         <input
           id="groupName"
           type="text"
@@ -65,7 +66,7 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="editGroupName">Division Name</label>
+        <label for="editGroupName" class="form-label">Division Name</label>
         <input
           id="editGroupName"
           type="text"
