--- a/src/app/features/achievement/achievement.component.html
+++ b/src/app/features/achievement/achievement.component.html
@@ -24,7 +24,9 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="achievementName">Achievement Name</label>
+        <label for="achievementName" class="form-label1"
+          >Achievement Name</label
+        >
         <input
           pInputText
           id="achievementName"
@@ -34,19 +36,22 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="groupAchievement">Group Achievement</label>
+        <label for="groupAchievement" class="form-label1"
+          >Group Achievement</label
+        >
         <p-dropdown
           [options]="groupAchievementOptions"
           [(ngModel)]="newAchievement.group_achievement_id"
           (onChange)="onGroupAchievementChange($event)"
           placeholder="Select Group Achievement"
+          [appendTo]="'body'"
         >
         </p-dropdown>
       </div>
       <br />
       <div class="p-field">
-        <label for="enabled">Enabled</label>
-        <br />
+        <label for="enabled" class="form-label1">Enabled</label>
+
         <select
           id="enabled"
           [(ngModel)]="newAchievement.enabled"
@@ -85,7 +90,9 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="editAchievementName">Achievement Name</label>
+        <label for="editAchievementName" class="form-label1"
+          >Achievement Name</label
+        >
         <input
           pInputText
           id="editAchievementName"
@@ -95,17 +102,20 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editGroupAchievement">Group Achievement</label>
+        <label for="editGroupAchievement" class="form-label1"
+          >Group Achievement</label
+        >
         <p-dropdown
           [options]="groupAchievementOptions"
           [(ngModel)]="editAchievement.group_achievement_id"
           placeholder="Select Group Achievement"
+          [appendTo]="'body'"
         >
         </p-dropdown>
       </div>
       <br />
       <div class="p-field">
-        <label for="editEnabled">Enabled</label>
+        <label for="editEnabled" class="form-label1">Enabled</label>
         <select
           id="editEnabled"
           [(ngModel)]="editAchievement.enabled"
