--- a/src/app/features/attitude-skill/attitude-skill.component.html
+++ b/src/app/features/attitude-skill/attitude-skill.component.html
@@ -24,7 +24,9 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="attitudeSkillName">Attitude Skill</label>
+        <label for="attitudeSkillName" class="form-label1"
+          >Attitude Skill</label
+        >
         <input
           pInputText
           id="attitudeSkillName"
@@ -34,18 +36,21 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="groupAttitudeSkill">Group Attitude Skill</label>
+        <label for="groupAttitudeSkill" class="form-label1"
+          >Group Attitude Skill</label
+        >
         <p-dropdown
           [options]="groupAttitudeSkillOptions"
           [(ngModel)]="newAttitudeSkill.group_attitude_skill_id"
           placeholder="Select Group Attitude Skill"
+          [appendTo]="'body'"
         >
         </p-dropdown>
       </div>
       <br />
       <div class="p-field">
-        <label for="enabled">Enabled</label>
-        <br />
+        <label for="enabled" class="form-label1">Enabled</label>
+
         <select
           id="enabled"
           [(ngModel)]="newAttitudeSkill.enabled"
@@ -84,7 +89,9 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="editAchievementName">Attitude Skill</label>
+        <label for="editAchievementName" class="form-label1"
+          >Attitude Skill</label
+        >
         <input
           pInputText
           id="editAchievementName"
@@ -94,17 +101,20 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editGroupAchievement">Group Attitude Skill</label>
+        <label for="editGroupAchievement" class="form-label1"
+          >Group Attitude Skill</label
+        >
         <p-dropdown
           [options]="groupAttitudeSkillOptions"
           [(ngModel)]="editAttitudeSkill.group_attitude_skill_id"
           placeholder="Select Group Achievement"
+          [appendTo]="'body'"
         >
         </p-dropdown>
       </div>
       <br />
       <div class="p-field">
-        <label for="editEnabled">Enabled</label>
+        <label for="editEnabled" class="form-label1">Enabled</label>
         <select
           id="editEnabled"
           [(ngModel)]="editAttitudeSkill.enabled"
