--- a/src/app/features/dev-plan/dev-plan.component.html
+++ b/src/app/features/dev-plan/dev-plan.component.html
@@ -25,7 +25,7 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="groupName">Dev Plan</label>
+        <label for="groupName" class="form-label1">Dev Plan</label>
         <input
           id="groupName"
           type="text"
@@ -38,8 +38,8 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="enabled">Enabled</label>
-        <br />
+        <label for="enabled" class="form-label1">Enabled</label>
+
         <select
           id="enabled"
           [(ngModel)]="newDevPlan.enabled"
@@ -77,7 +77,7 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="editGroupName">Dev Plan</label>
+        <label for="editGroupName" class="form-label1">Dev Plan</label>
         <input
           id="editGroupName"
           type="text"
@@ -87,7 +87,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editEnabled">Enabled</label>
+        <label for="editEnabled" class="form-label1">Enabled</label>
         <select
           id="editEnabled"
           [(ngModel)]="selectedDevPlan.enabled"
