--- a/src/app/features/group-achievement/group-achievement.component.html
+++ b/src/app/features/group-achievement/group-achievement.component.html
@@ -24,7 +24,7 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="groupName">Group Achievement</label>
+        <label for="groupName" class="form-label1">Group Achievement</label>
         <input
           id="groupName"
           type="text"
@@ -37,7 +37,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="percentage">Weight</label>
+        <label for="percentage" class="form-label1">Weight</label>
         <input
           id="percentage"
           type="number"
@@ -47,8 +47,8 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="enabled">Enabled</label>
-        <br />
+        <label for="enabled" class="form-label1">Enabled</label>
+
         <select
           id="enabled"
           [(ngModel)]="newGroupAchievement.enabled"
@@ -87,7 +87,7 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="editGroupName">Group Achievement</label>
+        <label for="editGroupName" class="form-label1">Group Achievement</label>
         <input
           id="editGroupName"
           type="text"
@@ -97,7 +97,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editPercentage">Weight</label>
+        <label for="editPercentage" class="form-label1">Weight</label>
         <input
           id="editPercentage"
           type="number"
@@ -107,7 +107,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editEnabled">Enabled</label>
+        <label for="editEnabled" class="form-label1">Enabled</label>
         <select
           id="editEnabled"
           [(ngModel)]="selectedGroupAchievement.enabled"
@@ -176,7 +176,7 @@
             Weight
             <p-sortIcon field="percentage"></p-sortIcon>
           </th>
-          <th class="percent-column" style="text-align: center">Action</th>
+          <th class="group-column" style="text-align: center">Action</th>
         </tr>
       </ng-template>
 
