--- a/src/app/features/group-attitude-skill/group-attitude-skill.component.html
+++ b/src/app/features/group-attitude-skill/group-attitude-skill.component.html
@@ -25,7 +25,7 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="groupName">Group Attitude Skill</label>
+        <label for="groupName" class="form-label1">Group Attitude Skill</label>
         <br />
         <input
           id="groupName"
@@ -39,7 +39,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="percentage">Weight</label>
+        <label for="percentage" class="form-label1">Weight</label>
         <br />
         <input
           id="percentage"
@@ -50,7 +50,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="enabled">Enabled</label>
+        <label for="enabled" class="form-label1">Enabled</label>
         <br />
         <select
           id="enabled"
@@ -90,7 +90,9 @@
   >
     <div class="p-fluid">
       <div class="p-field">
-        <label for="editGroupName">Group Attitude Skill</label>
+        <label for="editGroupName" class="form-label2"
+          >Group Attitude Skill</label
+        >
         <input
           id="editGroupName"
           type="text"
@@ -100,7 +102,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editPercentage">Weight</label>
+        <label for="editPercentage" class="form-label2">Weight</label>
         <input
           id="editPercentage"
           type="number"
@@ -110,7 +112,7 @@
       </div>
       <br />
       <div class="p-field">
-        <label for="editEnabled">Enabled</label>
+        <label for="editEnabled" class="form-label2">Enabled</label>
         <select
           id="editEnabled"
           [(ngModel)]="selectedGroupAttitudeSkill.enabled"
